# tg

./: .gitignore  .gitmodules  Makefile.in  Makefile.tgl  README-LUA.md  README-PY.md  README.md  config.h.in  configure.ac  interface.c  telegram-cli.8
debian/: changelog  clean  control  copyright  docs  install  preinst  prerm  rules  telegram-cli.logrotate  watch
debian/upstream/: metadata
